--- a/css/depictiondesign.css
+++ b/css/depictiondesign.css
@@ -1,19 +1,23 @@
+html {
+  background: white;
+}
+
 h1 {
 font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
   color: black;
-	font-size: 35px;
-	letter-spacing: -.5px;
-	font-weight: normal;
+  font-size: 35px;
+  letter-spacing: -.5px;
+  font-weight: normal;
   text-align:center;
-  margin:0px;
+  margin:5px;
 }
 
 h2 {
 font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
   color: #333333;
-	font-size: 23px;
-	letter-spacing: -1px;
-	font-weight: normal;
+  font-size: 23px;
+  letter-spacing: -1px;
+  font-weight: normal;
   text-align:center;
   margin:8px;
 }
@@ -21,9 +25,9 @@ font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
 h3 {
 font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
   color: #666666;
-	font-size: 18px;
-	letter-spacing: -1px;
-	font-weight: normal;
+  font-size: 18px;
+  letter-spacing: -1px;
+  font-weight: normal;
   text-align:center;
   margin:2px;
 }
