--- a/css/depictiondesign.css
+++ b/css/depictiondesign.css
@@ -1,7 +1,3 @@
-html {
-  background: white;
-}
-
 h1 {
 font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
   color: black;
@@ -9,7 +5,8 @@ font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
   letter-spacing: -.5px;
   font-weight: normal;
   text-align:center;
-  margin:5px;
+  margin-top: 5px;
+  margin-bottom: 0px;
 }
 
 h2 {
@@ -19,22 +16,22 @@ font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
   letter-spacing: -1px;
   font-weight: normal;
   text-align:center;
-  margin:8px;
+  margin: 8px;
 }
 
 h3 {
 font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
-  color: #666666;
+  color: #4D4D4D;
   font-size: 18px;
   letter-spacing: -1px;
   font-weight: normal;
   text-align:center;
-  margin:2px;
+  margin: 2px;
 }
 
 p {
   margin:0px;
-  color: #999999;
+  color: #666666;
   font-size: 15px;
   text-align:center;
 }
