--- a/css/depictiondesign.css
+++ b/css/depictiondesign.css
@@ -26,7 +26,8 @@ font-family:  'Hoefler Text', Georgia, 'Times New Roman', serif;
   letter-spacing: -1px;
   font-weight: normal;
   text-align:center;
-  margin: 2px;
+  margin-top: 2px;
+  margin-bottom: 0px;
 }
 
 p {
