--- a/css/depictiondesign.css
+++ b/css/depictiondesign.css
@@ -39,6 +39,8 @@ p {
   margin-bottom: 10px;
 }
 
-img {
-  position: center;
+img.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
